# fptajax

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
disc_direct_bc_checkpoints/smoke20k_seed0/: behavior_head.eqx  disc_head.eqx  encoder.eqx  meta.pkl  skill_head.eqx
disc_direct_bc_checkpoints/smoke_seed0/: behavior_head.eqx  disc_head.eqx  encoder.eqx  meta.pkl  skill_head.eqx
envs/lure_v0/: __init__.py  env.py
examples/: rd_sanity_check.py  rps_behavioral_example.py  rps_classic_fpta.py  rps_example.py  rps_g.py  rps_hierarchical_vs_deepsets.py  rps_interventions.py  rps_skill.py
examples/classical_fpta_suite/: _smoke.py  main.py  protocol.py
examples/iblotto/: README.md  RESULTS_online_id.md  _validate_against_matlab.py  ablate_basis_rbf.py  aggregate_seed_sweep.py  behavioral.py  benchmark.py  compare_pta_vs_bfpta.py  disc_direct.py  disc_direct_bc.py  game.py  generate_behavioral_data.py  generate_behavioral_small.py  inspect_dataset.py  online_id.py  online_id_br_validation.py  online_id_demo.py  online_id_sweep.py  policy.py  pta_compat.py  pta_trait_recovery.py  render_bfpta_section_figures.py  render_classical_fpta_section_figures.py  render_disc_direct_section_figures.py  render_match_animation.py  render_match_dynamics.py  render_online_id_animation.py  render_online_id_figures.py  (+7 more)
figures/: online_id_sweep_cache.npz
results/: disc_direct_bc_smoke20k_seed0.json
tests/: test_basis.py  test_behavioral.py  test_core.py  test_decomposition.py  test_hierarchical.py  test_hierarchical_g.py  test_hierarchical_skill.py  test_neural.py  test_pta.py
(+48 files in other folders)
